--- a/mrchllaja-css.css
+++ b/mrchllaja-css.css
@@ -1,5 +1,5 @@
-/* Label Info */
-.label-info-container{background:var(--contentB);box-shadow:0 5px 35px rgba(0,0,0,.07);border-radius:5px;padding:20px;position:relative}
+,/* Label Info */
+.label-info-container{background:var(--contentB);box-shadow:0 5px 35px rgba(0,0,0,.07);border-radius:50px;padding:20px;position:relative}
 .label-info-container::before{content:'';width:70px;height:70px;position:absolute;z-index:0;background:rgba(0,0,0,.04);bottom:0;left:0;border-radius:0 70px 0 0}
 .label-info-header-infotext{display:flex;justify-content:space-between;align-items:center}
 .label-info-infotext{display:flex;align-items:center;gap:15px}
