--- a/mrchllaja-css.css
+++ b/mrchllaja-css.css
@@ -1,3 +1,5 @@
+/* Gambar Otomatis Ditengah Artikel */ .separator a,.separator img{margin:auto 0!important}
+
 /* CodeBox CSS */
 .pre{background:#f6f6f6;color:#2f3337;direction: ltr;position:relative;border-radius:3px;overflow:hidden;margin:1.7em auto} 
 .pre pre{margin:0;color:inherit;background:inherit;display:block;position:relative;font-size:13px;line-height:1.6em;border-radius:3px;padding:30px 20px 20px;-moz-tab-size:2;tab-size:2;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none; overflow:auto;direction:ltr;white-space:pre} 
