--- a/card-design.css
+++ b/card-design.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   padding: 16px;
   margin: 20px 0;
-  width: 360px;
+  width: 100%;
   box-shadow: 0 2px 12px 0 rgba(30, 30, 30, .07);
   position: relative
 }
