--- a/form1.css
+++ b/form1.css
@@ -52,8 +52,8 @@ h2, h5 {
   padding: 10px 12px;
   font-size: 14px;
   border-radius: 12px;
-  border: 1px solid #ced4da;
-  background-color: #fff;
+  background: var(--contentB);
+  border: 1px solid var(--contentL);
 }
 
 .form-control::placeholder {
